--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "bootstrap": "^5.2.3",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
