--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
