--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -21,7 +22,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.9",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
